# irkit_based_example_submodule

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
benchmarks/: CMakeLists.txt  all.sh
scripts/: run-tests.sh
src/: app.cpp  daat.cpp  eval.cpp  livendead.cpp  print_postings.cpp  scoring.cpp  simple_benchmark.cpp  taat.cpp
tests/unit/: CMakeLists.txt  test_taat.cpp
